upload corlab and bioinfromatic essay

--- a/SBMS6002_bioinformatic.tex
+++ b/SBMS6002_bioinformatic.tex
@@ -60,13 +60,13 @@ Since such amount of sequence data generated from hight throughout experimental 
 In most cases, the processing of a huge data, e,g 100 Gigabytes (GB) of haploid human genome transfer from one location to another is carried out primarily by the most convenient method to them: use of external hard disk or mail, physical drives, web-based service, FTP and so on, which is always very time consuming and hardware-demanding. With considerable effort and attention has been given to improving the long data transfer times, here come out several reliable resources with satisfying user experience, as they guarantee the data can be free from any loss and damage in the possible shortest of transfer time, for example, both of paralleling and grid computing are being the cost-effective and efficient of a method, as they can make use of computation resources by dividing large of tasks into the different processor. Each process will responsible for a small piece of work, giving back the integrated results generated from each process in the end.
 
 \subsection{SECURITY}
-With massive increase in data generation and comsumption then ever before, leading critical issues about retaining security of data ,as the big data mostly contains amount of personal information. Adoption of better security system, for example, Authenticated encryption wiht advcend encryption algorithms only allowing authorized user access to the data, to guard and monitor the processing of data flowing in and out is essentail to prevent them from attach , illegal theft or other spitful action that could pose great risk to the integraity and availability of data.Unfortunately, these are still insufficient protect our data apporiately.In ligth of this situation, there are great number of general security measurement that we can utilized by ourselves.
-(i)Building up a strong firewell is the first line of defencse to keep your data protected. A firwall can be intergate into a physicall hardware device or software program.The benefit of the firewall is rountiely manage and monitor the network traffie, serving as an important barricade to stop and detect any hackers or virus which are inlcine to sneak into your system without permsssion.
-(ii) Implement effective safeguard policy and safety measurement (developing a tiered access system) to ensure no sensitive data leakage and reduce the opportunity of any unauthorized users approch data from exterior or interior sources to steal wisdom.
+With a massive increase in data generation and consumption than ever before, leading critical issues about retaining the security of data, as the big data mostly contains the amount of personal information. Adoption of better security system, for example, Authenticated encryption with advanced encryption algorithms only allowing authorized user access to the data, to guard and monitor the processing of data flowing in and out is essential to prevent them from attaching, illegal theft or other spitful action that could pose a great risk to the integrity and availability of data. Unfortunately, these are still insufficient to protect our data appropriately. In light of this situation, there is a great number of general security measures that we can utilize by ourselves.
+(i)Building up a strong firewall is the first line of defense to keep your data protected. A firewall can be integrated into a physical hardware device or software program. The benefit of the firewall routinely manages and monitor the network traffic, serving as an important barricade to stop and detect any hackers or virus which are inclined to sneak into your system without permission.
+(ii) Implement effective safeguard policy and safety measurement (developing a tiered access system) to ensure no sensitive data leakage and reduce the opportunity of any unauthorized users approach data from the exterior or interior sources to steal wisdom.
 
  
 \section{CONCLUSION}
-Big data has affected all work of life, for bioinformatic filed which empower enormous of opportunity for us to look at the biological information underlying the diverse organisms including animals, plants, and microbes in a  more broad perspective(such as in the areas of drug development and personal medicines).On the other hand, the scientist has faced difficulty in dealing the increasing amounts of omics data, dut to the processing speed of the Internet and the accommodation of computers does not meet the need to analysis, transfer and integrity of biological data, besides, the problem of security, privacy and ethical issues also present challenge for biology community. To make the bioinformatics field more productive and flourishing, we certainly need the coordinated efforts from both experimental and computational biologists on the improvement of computational methods, infrastructure scalability, and efficient algorithms to keep up with the growth rate of big data.
+data has affected all work of life, for bioinformatic filed which empower enormous of opportunity for us to look at the biological information underlying the diverse organisms including animals, plants, and microbes in a  more broad perspective(such as in the areas of drug development and personal medicines).On the other hand, the scientist has faced difficulty in dealing the increasing amounts of omics data, dut to the processing speed of the Internet and the accommodation of computers does not meet the need to analysis, transfer and integrity of biological data, besides, the problem of security, privacy and ethical issues also present challenge for biology community. To make the bioinformatics field more productive and flourishing, we certainly need the coordinated efforts from both experimental and computational biologists on the improvement of computational methods, infrastructure scalability, and efficient algorithms to keep up with the growth rate of big data.
 
 \medskip
 
